Add tweets.html with embedded tweets and links between index.html and tweets.html

--- a/My_First_Portfolio/html_basic/index.html
+++ b/My_First_Portfolio/html_basic/index.html
@@ -17,6 +17,8 @@
     <p>This is the fourth paragraph explaining my goals and future learning plans.</p>
 
     <a href="https://www.alxafrica.com"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="width: 200px;;"></a>
+
+    <p><a href="tweets.html">See my Tweets</a></p>
     
 </body>
 </html>
