Restructure pages with header, main (article+aside), footer

--- a/My_First_Portfolio/html_basic/index.html
+++ b/My_First_Portfolio/html_basic/index.html
@@ -3,22 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portolio</title>
+    <title>My First Portfolio</title>
 </head>
 <body>
 
-    <h1>Welcome to My Portfolio</h1>
-    <h2>About Me</h2>
-    <h3>My Skills</h3>
+    <!-- Header / Navigation -->
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <p>This is the first paragraph introducing myself and my portfolio projects.</p>
-    <p>This is the second paragraph highlighting my skills and achievements.</p>
-    <p>This is the third paragraph describing my experience with HTML, CSS, and GitHub.</p>
-    <p>This is the fourth paragraph explaining my goals and future learning plans.</p>
+    <!-- Main content -->
+    <main>
+        <article>
+            <h1>Welcome to My Portfolio</h1>
+            <h2>About Me</h2>
+            <h3>My Skills</h3>
 
-    <a href="https://www.alxafrica.com"><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="width: 200px;;"></a>
+            <p>This is the first paragraph introducing myself and my portfolio projects.</p>
+            <p>This is the second paragraph highlighting my skills and achievements.</p>
+            <p>This is the third paragraph describing my experience with HTML, CSS, and GitHub.</p>
+            <p>This is the fourth paragraph explaining my goals and future learning plans.</p>
 
-    <p><a href="tweets.html">See my Tweets</a></p>
-    
+            <a href="https://www.alxafrica.com">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" style="width:200px;">
+            </a>
+
+            <!-- Link to tweets.html -->
+            <p><a href="tweets.html">See my Tweets</a></p>
+        </article>
+
+        <aside>
+            <p>View my tweets here</p>
+        </aside>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>Made by George-christian - <a href="https://github.com/George-christian" target="_blank">here</a></p>
+    </footer>
+
 </body>
 </html>
